Fix: z-index fixed in p of drop page

--- a/app/components/wave/wave.css
+++ b/app/components/wave/wave.css
@@ -26,7 +26,7 @@
 
 .section-wave .wave.wave1{
     animation: animate 30s linear infinite;
-    z-index: 1000;
+    z-index: 4;
     opacity: 1;
     animation-delay: 0s;
     bottom: 0;
@@ -34,7 +34,7 @@
 
 .section-wave .wave.wave2{
     animation: animate2 10s linear infinite;
-    z-index: 999;
+    z-index: 3;
     opacity: 0.5;
     animation-delay: -5s;
     bottom: 10px;
@@ -42,7 +42,7 @@
 
 .section-wave .wave.wave3{
     animation: animate 25s linear infinite;
-    z-index: 998;
+    z-index: 2;
     opacity: 0.2;
     animation-delay: -2s;
     bottom: 15px;
@@ -50,7 +50,7 @@
 
 .section-wave .wave.wave4{
     animation: animate2 25s linear infinite;
-    z-index: 997;
+    z-index: 1;
     opacity: 0.7;
     animation-delay: -5s;
     bottom: 10px;
